<resources>
    <string name="app_name">PetSociety</string>
    <string name="login">LOGIN</string>
    <string name="to_continue">TO CONTINUE</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="not_a_member_yet">Not A Member yet? Sign UP!</string>
    <string name="sign_up">SIGN UP</string>
    <string name="using_your_email">Using Your Email</string>
    <string name="email">Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_to_have_an_account">already to have an account?</string>
    <string name="home">Home</string>
    <string name="adopsi">Adopsi</string>
    <string name="galang_dana">Galang Dana</string>
    <string name="inbox">Inbox</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="bantuan">Bantuan</string>
    <string name="log_out">Log Out</string>
    <string name="header_home">Ingin melakukan kebaikan apa hari ini?</string>
    <string name="btn_galdana_home">Galang Dana</string>
    <string name="btn_buka_adopsi">Buka Adopsi</string>
    <string name="add_photo">Add Photo</string>
    <string name="jenis_hewan">Jenis Hewan</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="post">Post</string>
    <string name="judul">Judul</string>
    <string name="nama_hewan">Nama Hewan</string>
    <string name="no_telepon">No.Telepon</string>
    <string name="change_picture">change picture</string>
    <string name="_62">+62</string>
    <string name="_8xxxxxxxxxx">8XXXXXXXXXX</string>
</resources>
