<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
<<<<<<< HEAD
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment">
android:orientation="vertical"
tools:context=".ProfileFragment">

<!-- TODO: Update blank fragment layout -->
<Button
    android:id="@+id/btn_editProfile"
    android:layout_width="90dp"
    android:layout_height="27dp"
    android:text="@string/edit_profile"
    android:layout_gravity="right"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:background="#FFFFFF"
    android:textColor="#B14B4B"
    android:textSize="12sp"/>

<LinearLayout
    android:layout_marginLeft="21dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_person_black_24dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="10dp">
        <TextView
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="20sp"
            android:textColor="#000000"/>
        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="14sp"
            android:textColor="#000000"/>
    </LinearLayout>
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginLeft="21dp"
    android:layout_marginTop="30dp">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_help_outline_black_24dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/bantuan"
        android:layout_marginLeft="34dp"
        android:textSize="16sp"
        android:textColor="#000000"
        android:gravity="center_vertical"/>
</LinearLayout>

=======

>>>>>>> 253c4d620375252eac453881203ba0ac55e595e9


    <Button
        android:id="@+id/btn_logout"
        android:layout_width="297dp"
        android:layout_height="39dp"
        android:text="@string/log_out"
        android:layout_gravity="center"
        />
</LinearLayout>