<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFCFC"
    android:orientation="vertical">

    <!-- margintop habis d benerin -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="36sp"
        android:textColor="#FABEBE"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/using_your_email"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="#C4C4C4"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/username"
        android:textColorHint="#FABEBE"
        >

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColorHint="#FABEBE"
        android:backgroundTint="#FABEBE"
        android:inputType="textPersonName"
        android:layout_marginTop="20dp"
        android:textColor="#FABEBE"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/email"
        android:textColorHint="#FABEBE"
        >

    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#FABEBE"
        android:inputType="textEmailAddress"
        android:textColor="#FABEBE"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_gravity="center"
        android:hint="@string/password"
        android:textColorHint="#FABEBE"
        >

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#FABEBE"
        android:inputType="textPassword"
        android:textColor="#FABEBE"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <Button
        android:id="@+id/btn_signup"
        android:layout_width="121dp"
        android:layout_height="39dp"
        android:text="@string/sign_up"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:background="@drawable/rounded_button"
        android:textColor="#FFFFFF"
        />

    <TextView
        android:id="@+id/have_acount"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_to_have_an_account"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:textColor="#FABEBE"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/cat"
        android:layout_below="@+id/tv_signup"
        android:scaleX="1.234"
        android:scaleType="fitEnd"
        />
</LinearLayout>