<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <com.synnapps.carouselview.CarouselView
        android:id="@+id/carousel_vhome"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        app:fillColor="#B14B4B"
        app:strokeColor="@android:color/white">

    </com.synnapps.carouselview.CarouselView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/header_home"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_galang"
        android:layout_width="340dp"
        android:layout_height="39dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_btn_red"
        android:text="@string/btn_galdana_home"
        android:textColor="#FFFF"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_buka_adopsi"
        android:layout_width="340dp"
        android:layout_height="39dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_btn_red"
        android:text="@string/btn_buka_adopsi"
        android:textColor="#FFFF"
        android:textSize="24sp" />


</LinearLayout>