<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#FFB6B9">
    <!-- margintop habis d benerin -->
    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/tv_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_login"
        android:text="@string/to_continue"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"/>

    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_continue"
        android:hint="@string/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:backgroundTint="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_email"
        android:hint="@string/password"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:inputType="textPassword"/>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_marginTop="35dp"
        android:layout_below="@id/edittext_password"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_password"
        android:layout_centerHorizontal="true"
        android:background="#FFFFFF"
        android:text="@string/login"
        android:textColor="#FFB6B9"
        android:textSize="24sp"
        android:layout_marginTop="6dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        >

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_a_member_yet"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:layout_marginLeft="125dp"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="900dp"
            android:layout_height="300dp"
            android:layout_marginLeft="-540dp"
            app:srcCompat="@drawable/cat" />

    </LinearLayout>
</RelativeLayout>